# simple-download-manager

./: CMakeLists.txt  LICENSE  README.md
include/aux/: FileWriter.hpp  ThreadPool.hpp
include/core/: DownloadApplication.hpp  DownloadManager.hpp  DownloadTask.hpp
include/ui/: ActiveScreen.hpp  HistoryScreen.hpp  Screen.hpp  UI.hpp
include/util/: args.hpp  file.hpp  format.hpp  http.hpp
scripts/: build.sh  run.sh
src/: main.cpp
src/aux/: FileWriter.cpp  ThreadPool.cpp
src/core/: DownloadApplication.cpp  DownloadManager.cpp  DownloadTask.cpp
src/ui/: ActiveScreen.cpp  HistoryScreen.cpp  UI.cpp
src/util/: args.cpp  file.cpp  format.cpp  http.cpp
